syntax = "proto3";

package user;

option go_package="user";

import "user/common.proto";


message GetUserInfoReq {
    uint64 user_id = 1;
}

message GetUserInfoRsp {
    int32 code = 1;
    string msg = 2;
    string log_id = 3;
    Data data = 4;
    message Data {
        BaseUser user = 1;
    }
}

message UpdateUserInfoReq {
    uint64 user_id = 1;
    string username = 2;
    string avatar_url = 3;
    string register_type = 4;
    uint64 shop_id = 5;
}

message UpdateUserInfoRsp {
    int32 code = 1;
    string msg = 2;
    string log_id = 3;
    Data data = 4;
    message Data {
        BaseUser user = 1;
    }
}
